@@ -3,7 +3,6 @@ package net.toujoustudios.kazunya.command.list.general;
 import net.dv8tion.jda.api.EmbedBuilder;
 import net.dv8tion.jda.api.components.actionrow.ActionRow;
 import net.dv8tion.jda.api.components.buttons.Button;
-import net.dv8tion.jda.api.entities.Member;
 import net.dv8tion.jda.api.interactions.commands.OptionMapping;
 import net.dv8tion.jda.api.interactions.commands.OptionType;
 import net.dv8tion.jda.api.interactions.commands.build.OptionData;
@@ -30,7 +29,6 @@ public class HelpCommand implements ICommand {
     }
 
     @Override
-    @SuppressWarnings("all")
     public void handle(CommandContext context) {
 
         List<OptionMapping> args = context.getArgs();
@@ -46,27 +44,20 @@ public class HelpCommand implements ICommand {
             StringBuilder builderGeneral = new StringBuilder();
             StringBuilder builderRoleplay = new StringBuilder();
             StringBuilder builderFun = new StringBuilder();
-            StringBuilder builderStats = new StringBuilder();
             StringBuilder builderTools = new StringBuilder();
-            StringBuilder builderEconomy = new StringBuilder();
-            StringBuilder builderNSFW = new StringBuilder();
-            StringBuilder builderAdministration = new StringBuilder();
 
             for(ICommand command : manager.getCommands()) {
                 if(command.category() == CommandCategory.GENERAL) {
-                    builderGeneral.append("`/" + command.name() + "` - " + command.description() + "\n");
+                    builderGeneral.append("`/").append(command.name()).append("` - ").append(command.description()).append("\n");
                 }
                 if(command.category() == CommandCategory.ROLEPLAY) {
-                    builderRoleplay.append("`/" + command.name() + "` - " + command.description() + "\n");
+                    builderRoleplay.append("`/").append(command.name()).append("` - ").append(command.description()).append("\n");
                 }
                 if(command.category() == CommandCategory.FUN) {
-                    builderFun.append("`/" + command.name() + "` - " + command.description() + "\n");
+                    builderFun.append("`/").append(command.name()).append("` - ").append(command.description()).append("\n");
                 }
                 if(command.category() == CommandCategory.TOOLS) {
-                    builderTools.append("`/" + command.name() + "` - " + command.description() + "\n");
-                }
-                if(command.category() == CommandCategory.NSFW) {
-                    builderNSFW.append("`/" + command.name() + "` - " + command.description() + "\n");
+                    builderTools.append("`/").append(command.name()).append("` - ").append(command.description()).append("\n");
                 }
             }
 
@@ -74,26 +65,7 @@ public class HelpCommand implements ICommand {
             embedBuilder.addField(":heart: Roleplay:", builderRoleplay.toString(), false);
             embedBuilder.addField(":sparkles: Fun:", builderFun.toString(), false);
             embedBuilder.addField(":hammer: Tools:", builderTools.toString(), false);
-            embedBuilder.addField(":credit_card: Economy:", builderEconomy.toString(), false);
-            if(context.interaction().getChannel().asTextChannel().isNSFW())
-                embedBuilder.addField(":no_entry_sign: NSFW:", builderNSFW.toString(), false);
-            if(!context.member().getId().equals(config.getString("user.admin")))
-                embedBuilder.addField(":tools: Administration:", builderAdministration.toString(), false);
-
-            boolean isOwnerOnServer = false;
-            for(Member member : context.guild().getMembers()) {
-                String id = member.getId();
-                if(id.equals(config.getString("user.admin"))) {
-                    isOwnerOnServer = true;
-                    break;
-                }
-            }
-
-            if(isOwnerOnServer) {
-                embedBuilder.addField(":bookmark_tabs: Credits:", context.guild().getMemberById(config.getString("user.admin")).getAsMention() + " - Toujou Studios", false);
-            } else {
-                embedBuilder.addField(":bookmark_tabs: Credits:", "IanToujou - Toujou Studios", false);
-            }
+            embedBuilder.addField(":bookmark_tabs: Credits:", "IanToujou", false);
 
             context.interaction().replyEmbeds(embedBuilder.build())
                     .addComponents(ActionRow.of(Button.link(config.getString("link.help"), "Docs"), Button.link(config.getString("link.invite"), "Invite")))
@@ -102,7 +74,7 @@ public class HelpCommand implements ICommand {
 
         }
 
-        String search = args.get(0).getAsString();
+        String search = args.getFirst().getAsString();
         ICommand command = manager.command(search);
 
         if(command == null) {
